--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,6 @@
   "nav.search": "Search",
   "nav.library": "Library",
   "nav.settings": "Settings",
-
   "welcome.title": "Welcome to Snowify",
   "welcome.desc": "Sign in to sync your playlists, liked songs, and settings across all your devices.",
   "welcome.signIn": "Sign In",
@@ -13,7 +12,6 @@
   "welcome.warning": "Without an account, your data is stored locally and can't be recovered if lost.",
   "welcome.enterEmailPassword": "Please enter email and password",
   "welcome.passwordMinLength": "Password must be at least 6 characters",
-
   "home.greeting.morning": "Good morning",
   "home.greeting.afternoon": "Good afternoon",
   "home.greeting.evening": "Good evening",
@@ -22,7 +20,6 @@
   "home.recentEmptyHint": "Start by searching for something!",
   "home.newFromArtists": "New From Artists You Follow",
   "home.recommendedSongs": "Recommended Songs",
-
   "search.placeholder": "What do you want to listen to?",
   "search.empty": "Search for songs, artists, albums, or playlists",
   "search.floatingText": "Search",
@@ -39,17 +36,14 @@
   "search.noResults": "No results found",
   "search.noResultsFor": "No results found for \"{{query}}\"",
   "search.searchFailed": "Search failed. Please try again.",
-
   "library.title": "Your Library",
   "library.emptyTitle": "Create your first playlist",
-  "library.emptyDesc": "It\u2019s easy \u2014 we\u2019ll help you",
+  "library.emptyDesc": "It’s easy — we’ll help you",
   "library.createPlaylist": "Create playlist",
-
   "sidebar.playlists": "Playlists",
   "sidebar.likedSongs": "Liked Songs",
   "sidebar.songCount.one": "{{count}} song",
   "sidebar.songCount.other": "{{count}} songs",
-
   "playlist.type": "PLAYLIST",
   "playlist.playAll": "Play all",
   "playlist.shufflePlay": "Shuffle play",
@@ -59,14 +53,9 @@
   "playlist.delete": "Delete playlist",
   "playlist.empty": "This playlist is empty",
   "playlist.emptyHint": "Find songs you like and add them here",
-  "playlist.exportSuccess": "Playlist exported successfully",
   "playlist.confirmDelete": "Delete \"{{name}}\"?\nThis cannot be undone.",
-
   "album.type": "ALBUM",
-  "album.single": "SINGLE",
-  "album.ep": "EP",
   "album.couldNotLoad": "Could not load album tracks.",
-
   "artist.type": "ARTIST",
   "artist.follow": "Follow",
   "artist.following": "Following",
@@ -86,11 +75,10 @@
   "artist.notFound": "Artist not found",
   "artist.noTracks": "No tracks found for this artist.",
   "artist.noReleases": "No releases found.",
+  "artist.featuredOn": "Featured on",
   "artist.couldNotLoad": "Could not load artist info.",
-
   "auth.notSignedIn": "Not signed in",
   "auth.useEmailSignIn": "Use email sign-in",
-
   "player.play": "Play",
   "player.pause": "Pause",
   "player.previous": "Previous",
@@ -104,7 +92,6 @@
   "player.volume": "Volume",
   "player.repeatAll": "Repeat All",
   "player.repeatOne": "Repeat One",
-
   "queue.title": "Queue",
   "queue.recentlyPlayed": "Recently Played",
   "queue.nowPlaying": "Now Playing",
@@ -115,14 +102,12 @@
   "queue.nothingPlaying": "Nothing playing",
   "queue.noRecentTracks": "No recently played tracks",
   "queue.removeFromQueue": "Remove from queue",
-
   "lyrics.title": "Lyrics",
   "lyrics.empty": "Play a song to see lyrics",
   "lyrics.notFound": "No lyrics found for this song",
-  "lyrics.searching": "Searching for lyrics\u2026",
+  "lyrics.searching": "Searching for lyrics…",
   "lyrics.failed": "Failed to load lyrics",
   "lyrics.toggleLyrics": "Toggle Lyrics",
-
   "context.play": "Play",
   "context.playAll": "Play All",
   "context.playNext": "Play Next",
@@ -140,7 +125,6 @@
   "context.moveUp": "Move up",
   "context.moveDown": "Move down",
   "context.goToArtist": "Go to Artist",
-  "context.goToAlbum": "Go to Album",
   "context.remove": "Remove",
   "context.rename": "Rename",
   "context.delete": "Delete",
@@ -149,7 +133,6 @@
   "context.saveToLibrary": "Save as Playlist",
   "context.removeFromLibrary": "Remove from library",
   "context.shufflePlay": "Shuffle Play",
-
   "settings.title": "Settings",
   "settings.account": "Account",
   "settings.accountDesc": "Sign in to sync your playlists, liked songs, and settings across devices.",
@@ -230,27 +213,24 @@
   "settings.language": "Language",
   "settings.languageDesc": "App display language",
   "settings.langAuto": "System default",
-  "settings.langEn": "English",
-  "settings.langEs": "Español",
+  "settings.seconds": "{{value}}s",
   "settings.customThemeSeparator": "── Custom ──",
-
   "update.checking": "Checking for updates...",
   "update.available": "Update available: v{{version}}",
   "update.availableDesc": "A new version is ready to download.",
-  "update.upToDate": "You\u2019re up to date!",
+  "update.upToDate": "You’re up to date!",
   "update.downloading": "Downloading update... {{percent}}%",
   "update.downloaded": "Update v{{version}} downloaded",
   "update.downloadedDesc": "Restart now to apply the update.",
   "update.error": "Update check failed",
   "update.errorNoConnection": "Could not reach update server. Check your internet connection.",
   "update.errorNoMetadata": "No update metadata found in the latest release.",
-
   "modal.enterName": "Enter name",
   "modal.cancel": "Cancel",
   "modal.ok": "OK",
   "modal.createPlaylist": "Create playlist",
   "modal.renamePlaylist": "Rename playlist",
-
+  "modal.defaultPlaylistName": "My Playlist",
   "spotify.title": "Import Spotify Playlists",
   "spotify.desc": "Export your Spotify playlists as CSV using {{link}}, then import the files here.",
   "spotify.selectFiles": "Select CSV Files",
@@ -265,7 +245,7 @@
   "spotify.matchingPlaylist": "Playlist {{current}}/{{total}} — Matching tracks...",
   "spotify.failedToMatch": "Failed to match ({{count}})",
   "spotify.notFound": "({{count}} not found)",
-
+  "spotify.selectAtLeastOne": "Select at least one playlist",
   "changelog.title": "What's New",
   "changelog.loading": "Loading changelog...",
   "changelog.gotIt": "Got it",
@@ -273,7 +253,6 @@
   "changelog.updatesSince": "{{count}} updates since v{{version}}",
   "changelog.released": "Released {{date}}",
   "changelog.whatsNewVersion": "What's New in v{{version}}",
-
   "video.listenOnly": "Listen only",
   "video.minimize": "Minimize",
   "video.expand": "Expand",
@@ -281,11 +260,9 @@
   "video.loading": "Loading video...",
   "video.musicVideo": "Music Video",
   "video.watch": "Watch",
-
   "trackList.title": "Title",
   "trackList.artist": "Artist",
   "trackList.plays": "Plays",
-
   "toast.radioStarted": "Radio started",
   "toast.couldNotStartRadio": "Could not start radio",
   "toast.linkCopied": "Link copied to clipboard",
@@ -321,9 +298,9 @@
   "toast.failedLoadAlbum": "Could not load album",
   "toast.failedLoadPlaylist": "Could not load playlist",
   "toast.playbackFailed": "Playback failed: {{error}}",
-  "toast.audioError": "Audio error \u2014 skipping to next track",
-  "toast.streamStalled": "Stream stalled \u2014 skipping to next",
-  "toast.multipleFailures": "Multiple tracks failed \u2014 stopping playback",
+  "toast.audioError": "Audio error — skipping to next track",
+  "toast.streamStalled": "Stream stalled — skipping to next",
+  "toast.multipleFailures": "Multiple tracks failed — stopping playback",
   "toast.loadingRadio": "Loading radio...",
   "toast.loadingTrack": "Loading: {{title}}",
   "toast.following": "Following {{name}}",
@@ -331,7 +308,7 @@
   "toast.savedToLibrary": "Saved \"{{name}}\" with {{count}} songs",
   "toast.removedFromLibrary": "Removed \"{{name}}\" from library",
   "toast.importCancelled": "Import cancelled",
-  "toast.importedPlaylists": "Imported {{playlistCount}} playlist(s) \u2014 {{trackCount}} tracks",
+  "toast.importedPlaylists": "Imported {{playlistCount}} playlist(s) — {{trackCount}} tracks",
   "toast.importedTracks": "Imported {{count}} tracks",
   "toast.noTracksMatched": "No tracks could be matched",
   "toast.themeAdded.one": "Added {{count}} theme",
@@ -341,7 +318,7 @@
   "toast.themeListRefreshed": "Theme list refreshed",
   "toast.selectCustomTheme": "Select a custom theme first",
   "toast.themeRemoved": "Theme removed",
-  "toast.discordError": "Could not connect to Discord \u2014 is it running?",
+  "toast.discordError": "Could not connect to Discord — is it running?",
   "toast.normalizationFailed": "Loudness normalization failed to initialize",
   "toast.exploreRegionSet": "Explore region set to {{region}}",
   "toast.exploreRegionCleared": "Explore region cleared",
@@ -351,12 +328,11 @@
   "toast.historyViewCleared": "History cleared",
   "toast.lyricsNotAvailable": "Synced lyrics not available for this song",
   "toast.updateAvailable": "Update v{{version}} available",
-  "toast.updateDownloaded": "Update downloaded \u2014 restart to apply",
+  "toast.updateDownloaded": "Update downloaded — restart to apply",
   "toast.failedLoadVideo": "Failed to load video",
   "toast.noPlaylistsForMood": "No playlists found for this mood",
   "toast.couldNotLoadPlaylist": "Could not load playlist",
   "toast.couldNotLoadTracks": "Could not load tracks",
-
   "common.clear": "Clear",
   "common.close": "Close",
   "common.minimize": "Minimize",
@@ -371,7 +347,6 @@
   "common.password": "Password",
   "common.unknownArtist": "Unknown Artist",
   "common.remove": "Remove",
-
   "dialog.firstTimeSetup": "First Time Setup",
   "dialog.installingYtdlp": "Installing yt-dlp...",
   "dialog.ytdlpRequired": "yt-dlp is required for audio streaming. Homebrew was detected on your system.\n\nClick \"Install\" to install it automatically.",
@@ -389,15 +364,14 @@
   "dialog.showLogs": "Show Logs",
   "dialog.ytdlpInstallFailed": "Installation failed (exit code {{code}}). Try manually: brew install yt-dlp",
   "dialog.ytdlpInstalled": "yt-dlp installed successfully!",
-
   "explore.backToMoods": "← Back to Moods & Genres",
+  "explore.noData": "No explore data available.",
   "explore.couldNotLoad": "Could not load explore data.",
   "explore.moodsAndGenres": "Moods & Genres",
   "explore.newAlbums": "New Albums & Singles",
   "explore.newMusicVideos": "New Music Videos",
   "explore.topArtists": "Top Artists",
   "explore.trending": "Trending",
-
   "sync.connected": "Connected",
   "sync.syncing": "Syncing...",
   "sync.syncedJustNow": "Synced just now"
