--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,7 +4,6 @@
   "nav.search": "Rechercher",
   "nav.library": "Bibliothèque",
   "nav.settings": "Paramètres",
-
   "welcome.title": "Bienvenue sur Snowify",
   "welcome.desc": "Connectez-vous pour synchroniser vos playlists, titres aimés et paramètres sur tous vos appareils.",
   "welcome.signIn": "Se connecter",
@@ -13,7 +12,6 @@
   "welcome.warning": "Sans compte, vos données sont stockées localement et ne pourront pas être récupérées en cas de perte.",
   "welcome.enterEmailPassword": "Veuillez entrer votre adresse e-mail et votre mot de passe",
   "welcome.passwordMinLength": "Le mot de passe doit contenir au moins 6 caractères",
-
   "home.greeting.morning": "Bonjour",
   "home.greeting.afternoon": "Bon après-midi",
   "home.greeting.evening": "Bonsoir",
@@ -22,7 +20,6 @@
   "home.recentEmptyHint": "Commencez par rechercher quelque chose !",
   "home.newFromArtists": "Nouveautés des artistes que vous suivez",
   "home.recommendedSongs": "Titres recommandés",
-
   "search.placeholder": "Que souhaitez-vous écouter ?",
   "search.empty": "Rechercher des titres, artistes, albums ou playlists",
   "search.floatingText": "Rechercher",
@@ -39,17 +36,14 @@
   "search.noResults": "Aucun résultat trouvé",
   "search.noResultsFor": "Aucun résultat trouvé pour « {{query}} »",
   "search.searchFailed": "La recherche a échoué. Veuillez réessayer.",
-
   "library.title": "Votre bibliothèque",
   "library.emptyTitle": "Créez votre première playlist",
-  "library.emptyDesc": "C\u2019est facile — on vous aide",
+  "library.emptyDesc": "C’est facile — on vous aide",
   "library.createPlaylist": "Créer une playlist",
-
   "sidebar.playlists": "Playlists",
   "sidebar.likedSongs": "Titres aimés",
   "sidebar.songCount.one": "{{count}} titre",
   "sidebar.songCount.other": "{{count}} titres",
-
   "playlist.type": "PLAYLIST",
   "playlist.playAll": "Tout lire",
   "playlist.shufflePlay": "Lecture aléatoire",
@@ -59,14 +53,9 @@
   "playlist.delete": "Supprimer la playlist",
   "playlist.empty": "Cette playlist est vide",
   "playlist.emptyHint": "Trouvez des titres que vous aimez et ajoutez-les ici",
-  "playlist.exportSuccess": "Playlist exportée avec succès",
   "playlist.confirmDelete": "Supprimer « {{name}} » ?\nCette action est irréversible.",
-
   "album.type": "ALBUM",
-  "album.single": "SINGLE",
-  "album.ep": "EP",
-  "album.couldNotLoad": "Impossible de charger les pistes de l\u2019album.",
-
+  "album.couldNotLoad": "Impossible de charger les pistes de l’album.",
   "artist.type": "ARTISTE",
   "artist.follow": "Suivre",
   "artist.following": "Suivi(e)",
@@ -86,11 +75,10 @@
   "artist.notFound": "Artiste introuvable",
   "artist.noTracks": "Aucune piste trouvée pour cet artiste.",
   "artist.noReleases": "Aucune sortie trouvée.",
-  "artist.couldNotLoad": "Impossible de charger les informations de l\u2019artiste.",
-
+  "artist.featuredOn": "Apparaît dans",
+  "artist.couldNotLoad": "Impossible de charger les informations de l’artiste.",
   "auth.notSignedIn": "Non connecté",
   "auth.useEmailSignIn": "Se connecter par e-mail",
-
   "player.play": "Lecture",
   "player.pause": "Pause",
   "player.previous": "Précédent",
@@ -100,35 +88,32 @@
   "player.like": "Aimer",
   "player.unlike": "Ne plus aimer",
   "player.lyrics": "Paroles",
-  "player.queue": "File d\u2019attente",
+  "player.queue": "File d’attente",
   "player.volume": "Volume",
   "player.repeatAll": "Tout répéter",
   "player.repeatOne": "Répéter un seul titre",
-
-  "queue.title": "File d\u2019attente",
+  "queue.title": "File d’attente",
   "queue.recentlyPlayed": "Écoutés récemment",
   "queue.nowPlaying": "En cours de lecture",
   "queue.upNext": "À suivre",
   "queue.clear": "Vider",
   "queue.backToTop": "Retour en haut",
-  "queue.empty": "La file d\u2019attente est vide",
+  "queue.empty": "La file d’attente est vide",
   "queue.nothingPlaying": "Rien en cours de lecture",
   "queue.noRecentTracks": "Aucun titre écouté récemment",
-  "queue.removeFromQueue": "Retirer de la file d\u2019attente",
-
+  "queue.removeFromQueue": "Retirer de la file d’attente",
   "lyrics.title": "Paroles",
   "lyrics.empty": "Lancez un titre pour voir les paroles",
   "lyrics.notFound": "Aucune parole trouvée pour ce titre",
-  "lyrics.searching": "Recherche des paroles\u2026",
+  "lyrics.searching": "Recherche des paroles…",
   "lyrics.failed": "Échec du chargement des paroles",
   "lyrics.toggleLyrics": "Afficher/Masquer les paroles",
-
   "context.play": "Lire",
   "context.playAll": "Tout lire",
   "context.playNext": "Lire ensuite",
   "context.playAudio": "Lire en audio",
   "context.playVideo": "Lire la vidéo",
-  "context.addToQueue": "Ajouter à la file d\u2019attente",
+  "context.addToQueue": "Ajouter à la file d’attente",
   "context.startRadio": "Lancer la radio",
   "context.watchVideo": "Regarder la vidéo",
   "context.like": "Aimer",
@@ -139,8 +124,7 @@
   "context.removeFromLiked": "Retirer des titres aimés",
   "context.moveUp": "Déplacer vers le haut",
   "context.moveDown": "Déplacer vers le bas",
-  "context.goToArtist": "Voir l\u2019artiste",
-  "context.goToAlbum": "Voir l\u2019album",
+  "context.goToArtist": "Voir l’artiste",
   "context.remove": "Supprimer",
   "context.rename": "Renommer",
   "context.delete": "Supprimer",
@@ -149,7 +133,6 @@
   "context.saveToLibrary": "Enregistrer comme playlist",
   "context.removeFromLibrary": "Retirer de la bibliothèque",
   "context.shufflePlay": "Lecture aléatoire",
-
   "settings.title": "Paramètres",
   "settings.account": "Compte",
   "settings.accountDesc": "Connectez-vous pour synchroniser vos playlists, titres aimés et paramètres sur tous vos appareils.",
@@ -157,17 +140,17 @@
   "settings.createAccount": "Créer un compte",
   "settings.signOut": "Se déconnecter",
   "settings.syncNow": "Synchroniser maintenant",
-  "settings.displayName": "Nom d\u2019affichage",
+  "settings.displayName": "Nom d’affichage",
   "settings.save": "Enregistrer",
   "settings.cancel": "Annuler",
   "settings.changeAvatar": "Changer la photo de profil",
-  "settings.editName": "Modifier le nom d\u2019affichage",
+  "settings.editName": "Modifier le nom d’affichage",
   "settings.country": "Pays",
   "settings.countryDesc": "Personnalise les recommandations Explorer",
   "settings.countryNotSet": "Non défini",
   "settings.playback": "Lecture",
   "settings.autoplay": "Lecture automatique",
-  "settings.autoplayDesc": "Continuer avec des titres similaires quand la file d\u2019attente est terminée",
+  "settings.autoplayDesc": "Continuer avec des titres similaires quand la file d’attente est terminée",
   "settings.discordRpc": "Discord Rich Presence",
   "settings.discordRpcDesc": "Afficher ce que vous écoutez sur Discord",
   "settings.audioQuality": "Qualité audio",
@@ -183,12 +166,12 @@
   "settings.normTargetDesc": "Des valeurs plus basses = plus silencieux mais plus dynamique",
   "settings.video": "Vidéo",
   "settings.videoQuality": "Qualité vidéo",
-  "settings.videoQualityDesc": "Résolution pour la lecture vidéo dans l\u2019application",
+  "settings.videoQualityDesc": "Résolution pour la lecture vidéo dans l’application",
   "settings.premuxed": "Utiliser les vidéos pré-multiplexées",
   "settings.premuxedDesc": "Chargement plus rapide, qualité inférieure (désactiver pour la HD)",
   "settings.appearance": "Apparence",
   "settings.theme": "Thème",
-  "settings.themeDesc": "Choisissez un thème de couleurs pour l\u2019application",
+  "settings.themeDesc": "Choisissez un thème de couleurs pour l’application",
   "settings.customThemes": "Thèmes personnalisés",
   "settings.customThemesDesc": "Ajouter des fichiers .css personnalisés",
   "settings.addTheme": "Ajouter un thème",
@@ -200,18 +183,18 @@
   "settings.openThemesTitle": "Ouvrir le dossier des thèmes",
   "settings.removeThemeTitle": "Supprimer le thème personnalisé actuellement sélectionné",
   "settings.animations": "Animations",
-  "settings.animationsDesc": "Activer les transitions fluides et les animations dans toute l\u2019application",
+  "settings.animationsDesc": "Activer les transitions fluides et les animations dans toute l’application",
   "settings.effects": "Effets visuels",
   "settings.effectsDesc": "Effets de lueur, flou et ombre (désactiver pour de meilleures performances)",
   "settings.data": "Données",
-  "settings.clearHistory": "Effacer l\u2019historique de lecture",
-  "settings.clearHistoryDesc": "Supprimer les titres écoutés récemment de l\u2019accueil",
-  "settings.clearSearchHistory": "Effacer l\u2019historique de recherche",
+  "settings.clearHistory": "Effacer l’historique de lecture",
+  "settings.clearHistoryDesc": "Supprimer les titres écoutés récemment de l’accueil",
+  "settings.clearSearchHistory": "Effacer l’historique de recherche",
   "settings.clearSearchHistoryDesc": "Supprimer toutes les recherches enregistrées",
   "settings.resetAll": "Réinitialiser toutes les données",
   "settings.resetAllDesc": "Supprimer toutes les playlists, titres aimés et paramètres",
-  "settings.confirmClearHistory": "Effacer l\u2019historique de lecture ?",
-  "settings.confirmClearSearchHistory": "Effacer l\u2019historique de recherche ?",
+  "settings.confirmClearHistory": "Effacer l’historique de lecture ?",
+  "settings.confirmClearSearchHistory": "Effacer l’historique de recherche ?",
   "settings.confirmResetAll": "Réinitialiser TOUTES les données ? Cela supprimera toutes les playlists, titres aimés et paramètres.",
   "settings.confirmRemoveTheme": "Supprimer le thème « {{id}} » ?",
   "settings.about": "À propos",
@@ -222,18 +205,16 @@
   "settings.changelogDesc": "Découvrez les nouveautés de cette version",
   "settings.viewChangelog": "Voir le journal des modifications",
   "settings.joinCommunity": "Rejoindre la communauté",
-  "settings.joinCommunityDesc": "Obtenez de l\u2019aide, partagez vos retours et échangez sur Discord",
+  "settings.joinCommunityDesc": "Obtenez de l’aide, partagez vos retours et échangez sur Discord",
   "settings.joinDiscord": "Rejoindre Discord",
   "settings.downloadInstall": "Télécharger et installer",
   "settings.restartUpdate": "Redémarrer et mettre à jour",
   "settings.downloading": "Téléchargement...",
   "settings.language": "Langue",
-  "settings.languageDesc": "Langue d\u2019affichage de l\u2019application",
+  "settings.languageDesc": "Langue d’affichage de l’application",
   "settings.langAuto": "Par défaut du système",
-  "settings.langEn": "English",
-  "settings.langEs": "Español",
+  "settings.seconds": "{{value}}s",
   "settings.customThemeSeparator": "── Personnalisé ──",
-
   "update.checking": "Recherche de mises à jour...",
   "update.available": "Mise à jour disponible : v{{version}}",
   "update.availableDesc": "Une nouvelle version est prête à être téléchargée.",
@@ -244,13 +225,12 @@
   "update.error": "La vérification de la mise à jour a échoué",
   "update.errorNoConnection": "Impossible de joindre le serveur de mise à jour. Vérifiez votre connexion internet.",
   "update.errorNoMetadata": "Aucune métadonnée de mise à jour trouvée dans la dernière version.",
-
   "modal.enterName": "Entrez un nom",
   "modal.cancel": "Annuler",
   "modal.ok": "OK",
   "modal.createPlaylist": "Créer une playlist",
   "modal.renamePlaylist": "Renommer la playlist",
-
+  "modal.defaultPlaylistName": "Ma Playlist",
   "spotify.title": "Importer des playlists Spotify",
   "spotify.desc": "Exportez vos playlists Spotify en CSV via {{link}}, puis importez les fichiers ici.",
   "spotify.selectFiles": "Sélectionner des fichiers CSV",
@@ -265,7 +245,7 @@
   "spotify.matchingPlaylist": "Playlist {{current}}/{{total}} — Correspondance des pistes...",
   "spotify.failedToMatch": "Échec de la correspondance ({{count}})",
   "spotify.notFound": "({{count}} introuvable(s))",
-
+  "spotify.selectAtLeastOne": "Sélectionnez au moins une playlist",
   "changelog.title": "Nouveautés",
   "changelog.loading": "Chargement du journal des modifications...",
   "changelog.gotIt": "Compris",
@@ -273,7 +253,6 @@
   "changelog.updatesSince": "{{count}} mises à jour depuis la v{{version}}",
   "changelog.released": "Publié le {{date}}",
   "changelog.whatsNewVersion": "Nouveautés de la v{{version}}",
-
   "video.listenOnly": "Écouter seulement",
   "video.minimize": "Réduire",
   "video.expand": "Agrandir",
@@ -281,11 +260,9 @@
   "video.loading": "Chargement de la vidéo...",
   "video.musicVideo": "Clip musical",
   "video.watch": "Regarder",
-
   "trackList.title": "Titre",
   "trackList.artist": "Artiste",
   "trackList.plays": "Écoutes",
-
   "toast.radioStarted": "Radio lancée",
   "toast.couldNotStartRadio": "Impossible de lancer la radio",
   "toast.linkCopied": "Lien copié dans le presse-papiers",
@@ -295,8 +272,8 @@
   "toast.addedToPlaylist": "Ajouté à « {{name}} »",
   "toast.removedFromPlaylist": "Retiré de « {{name}} »",
   "toast.alreadyInPlaylist": "Déjà dans « {{name}} »",
-  "toast.addedToQueue": "Ajouté à la file d\u2019attente",
-  "toast.alreadyInQueue": "Déjà dans la file d\u2019attente",
+  "toast.addedToQueue": "Ajouté à la file d’attente",
+  "toast.alreadyInQueue": "Déjà dans la file d’attente",
   "toast.movedToPlayNext": "Déplacé pour lire ensuite",
   "toast.addedToPlayNext": "Ajouté pour lire ensuite",
   "toast.createdPlaylist": "Playlist « {{name}} » créée",
@@ -311,14 +288,14 @@
   "toast.accountCreated": "Compte créé et connecté",
   "toast.signedOut": "Déconnecté",
   "toast.syncedFromCloud": "Synchronisé depuis le cloud",
-  "toast.nameUpdated": "Nom d\u2019affichage mis à jour",
+  "toast.nameUpdated": "Nom d’affichage mis à jour",
   "toast.failedUpdateName": "Échec de la mise à jour du nom",
   "toast.avatarUpdated": "Photo de profil mise à jour",
   "toast.failedUpdateAvatar": "Échec de la mise à jour de la photo de profil",
   "toast.failedUpdateAvatarMsg": "Échec de la mise à jour de la photo de profil : {{error}}",
-  "toast.failedLoadImage": "Échec du chargement de l\u2019image",
-  "toast.failedSaveImage": "Échec de l\u2019enregistrement de l\u2019image",
-  "toast.failedLoadAlbum": "Impossible de charger l\u2019album",
+  "toast.failedLoadImage": "Échec du chargement de l’image",
+  "toast.failedSaveImage": "Échec de l’enregistrement de l’image",
+  "toast.failedLoadAlbum": "Impossible de charger l’album",
   "toast.failedLoadPlaylist": "Impossible de charger la playlist",
   "toast.playbackFailed": "Échec de la lecture : {{error}}",
   "toast.audioError": "Erreur audio — passage au titre suivant",
@@ -333,21 +310,21 @@
   "toast.importCancelled": "Importation annulée",
   "toast.importedPlaylists": "{{playlistCount}} playlist(s) importée(s) — {{trackCount}} pistes",
   "toast.importedTracks": "{{count}} pistes importées",
-  "toast.noTracksMatched": "Aucune piste n\u2019a pu être trouvée",
+  "toast.noTracksMatched": "Aucune piste n’a pu être trouvée",
   "toast.themeAdded.one": "{{count}} thème ajouté",
   "toast.themeAdded.other": "{{count}} thèmes ajoutés",
   "toast.themeReloaded": "Thème rechargé",
   "toast.themeNotFound": "Fichier de thème introuvable",
   "toast.themeListRefreshed": "Liste des thèmes actualisée",
-  "toast.selectCustomTheme": "Sélectionnez d\u2019abord un thème personnalisé",
+  "toast.selectCustomTheme": "Sélectionnez d’abord un thème personnalisé",
   "toast.themeRemoved": "Thème supprimé",
-  "toast.discordError": "Impossible de se connecter à Discord — est-il en cours d\u2019exécution ?",
-  "toast.normalizationFailed": "Échec de l\u2019initialisation de la normalisation du volume",
+  "toast.discordError": "Impossible de se connecter à Discord — est-il en cours d’exécution ?",
+  "toast.normalizationFailed": "Échec de l’initialisation de la normalisation du volume",
   "toast.exploreRegionSet": "Région Explorer définie sur {{region}}",
   "toast.exploreRegionCleared": "Région Explorer effacée",
   "toast.historyCleared": "Historique de lecture effacé",
   "toast.searchHistoryCleared": "Historique de recherche effacé",
-  "toast.queueCleared": "File d\u2019attente vidée",
+  "toast.queueCleared": "File d’attente vidée",
   "toast.historyViewCleared": "Historique effacé",
   "toast.lyricsNotAvailable": "Paroles synchronisées non disponibles pour ce titre",
   "toast.updateAvailable": "Mise à jour v{{version}} disponible",
@@ -356,7 +333,6 @@
   "toast.noPlaylistsForMood": "Aucune playlist trouvée pour cette ambiance",
   "toast.couldNotLoadPlaylist": "Impossible de charger la playlist",
   "toast.couldNotLoadTracks": "Impossible de charger les pistes",
-
   "common.clear": "Effacer",
   "common.close": "Fermer",
   "common.minimize": "Réduire",
@@ -371,34 +347,32 @@
   "common.password": "Mot de passe",
   "common.unknownArtist": "Artiste inconnu",
   "common.remove": "Supprimer",
-
   "dialog.firstTimeSetup": "Configuration initiale",
   "dialog.installingYtdlp": "Installation de yt-dlp...",
-  "dialog.ytdlpRequired": "yt-dlp est nécessaire pour le streaming audio. Homebrew a été détecté sur votre système.\n\nCliquez sur « Installer » pour l\u2019installer automatiquement.",
+  "dialog.ytdlpRequired": "yt-dlp est nécessaire pour le streaming audio. Homebrew a été détecté sur votre système.\n\nCliquez sur « Installer » pour l’installer automatiquement.",
   "dialog.install": "Installer",
-  "dialog.installFailed": "Échec de l\u2019installation",
-  "dialog.installFailedMsg": "Impossible d\u2019installer yt-dlp via Homebrew.",
+  "dialog.installFailed": "Échec de l’installation",
+  "dialog.installFailedMsg": "Impossible d’installer yt-dlp via Homebrew.",
   "dialog.installFailedDetail": "Veuillez essayer manuellement dans le Terminal :\n\nbrew install yt-dlp",
   "dialog.ytdlpNotFound": "yt-dlp introuvable",
   "dialog.setupRequired": "Configuration requise",
-  "dialog.ytdlpManualInstall": "yt-dlp est nécessaire pour le streaming audio mais n\u2019a pas pu être installé automatiquement.\n\nInstallez Homebrew depuis https://brew.sh, puis exécutez :\n\nbrew install yt-dlp",
+  "dialog.ytdlpManualInstall": "yt-dlp est nécessaire pour le streaming audio mais n’a pas pu être installé automatiquement.\n\nInstallez Homebrew depuis https://brew.sh, puis exécutez :\n\nbrew install yt-dlp",
   "dialog.openBrewSh": "Ouvrir brew.sh",
-  "dialog.brewFailed": "Échec de l\u2019exécution de brew. Essayez manuellement : brew install yt-dlp",
+  "dialog.brewFailed": "Échec de l’exécution de brew. Essayez manuellement : brew install yt-dlp",
   "dialog.brewRunning": "Exécution de brew install yt-dlp — cela peut prendre une minute.",
   "dialog.hideLogs": "Masquer les journaux",
   "dialog.showLogs": "Afficher les journaux",
-  "dialog.ytdlpInstallFailed": "L\u2019installation a échoué (code de sortie {{code}}). Essayez manuellement : brew install yt-dlp",
+  "dialog.ytdlpInstallFailed": "L’installation a échoué (code de sortie {{code}}). Essayez manuellement : brew install yt-dlp",
   "dialog.ytdlpInstalled": "yt-dlp installé avec succès !",
-
-  "explore.backToMoods": "\u2190 Retour aux Ambiances et Genres",
+  "explore.backToMoods": "← Retour aux Ambiances et Genres",
+  "explore.noData": "Aucune donnée disponible.",
   "explore.couldNotLoad": "Impossible de charger les données Explorer.",
   "explore.moodsAndGenres": "Ambiances et Genres",
   "explore.newAlbums": "Nouveaux Albums et Singles",
   "explore.newMusicVideos": "Nouveaux Clips Musicaux",
   "explore.topArtists": "Artistes en tête",
   "explore.trending": "Tendances",
-
   "sync.connected": "Connecté",
   "sync.syncing": "Synchronisation...",
-  "sync.syncedJustNow": "Synchronisé à l\u2019instant"
+  "sync.syncedJustNow": "Synchronisé à l’instant"
 }
